fix spacing bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,8 @@
   min-width: 100%;
   padding-right: 25px;
   padding-left: 25px;
-    padding-top: 40px;
-  padding-bottom: 40px;
+    margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 #about-section {
